--- a/adopters.html
+++ b/adopters.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Stem Clamp</li>
+								<li class="breadcrumb-item active" aria-current="page">Adopters</li>
 							</ol>
 						</nav>
 					</div>
@@ -175,6 +175,7 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
+
 
 <!-- Page Service Single Start -->
 <div class="page-service-single">
@@ -186,7 +187,7 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/6.png" alt="Stem Clamp">
+                            <img src="images/products/9.png" alt="Adopters">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
@@ -194,29 +195,29 @@
                     <!-- Service Entry Start -->
                     <div class="service-entry">
                         <p class="wow fadeInUp">
-                            The <strong>Stem Clamp</strong> is a vital part of valve automation systems used to securely fasten actuator stems to other moving components. Vinnu Engineering Works offers high-precision stem clamps designed for strong grip, alignment accuracy, and reliable performance in dynamic industrial applications.
+                            The <strong>Adopters</strong> are precision interface components used to join or transition between different mechanical parts such as shafts, flanges, or actuators. At Vinnu Engineering Works, we design and manufacture high-tolerance adopters tailored for industrial assemblies and automation systems.
                         </p>
 
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Manufactured using premium materials such as stainless steel, carbon steel, and alloy steel, our clamps are CNC-machined and tested for dimensional consistency. Each clamp is built to customer specifications or industry standards with options for split, bolted, or quick-release configurations.
+                            Our adopters are machined from durable materials like stainless steel, alloy steel, and mild steel, and are made to exact customer drawings or industry standards. We ensure accurate alignment, secure fitting, and longevity for each part produced.
                         </p>
 
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Stem Clamp</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Our stem clamps are widely used in:</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Adopters</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Commonly used in:</p>
                         <ul>
-                            <li>Automated and manual valve assemblies</li>
-                            <li>Control valve systems</li>
-                            <li>Actuator and stem couplings</li>
-                            <li>Pneumatic and hydraulic motion control</li>
+                            <li>Valve and actuator assemblies</li>
+                            <li>Rotary and linear motion connections</li>
+                            <li>Hydraulic and pneumatic systems</li>
+                            <li>Custom industrial machinery</li>
                         </ul>
 
                         <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
                         <ul>
-                            <li>Secure grip with anti-slip design</li>
-                            <li>High torsional strength under load</li>
-                            <li>Precision bored and aligned holes</li>
-                            <li>Available in split and solid models</li>
-                            <li>Custom dimensions and surface coatings available</li>
+                            <li>Engineered for high precision and tight tolerance</li>
+                            <li>Custom fit for complex assemblies</li>
+                            <li>Available in male/female configurations</li>
+                            <li>Supports high torque and axial loads</li>
+                            <li>Optional threads, keys, or locking features</li>
                         </ul>
                     </div>
 
@@ -233,12 +234,12 @@
                             <div class="accordion-item wow fadeInUp">
                                 <h2 class="accordion-header" id="heading1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What materials are used in your stem clamps?
+                                        What types of adopters do you manufacture?
                                     </button>
                                 </h2>
                                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We use stainless steel (304/316), carbon steel, and alloy steel, depending on load capacity and environmental exposure.</p>
+                                        <p>We manufacture straight, stepped, threaded, and flanged adopters based on your application and drawing requirements.</p>
                                     </div>
                                 </div>
                             </div>
@@ -246,12 +247,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="accordion-header" id="heading2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Do you provide clamps with customized holes or slots?
+                                        Are your adopters custom or standard?
                                     </button>
                                 </h2>
                                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes, we offer fully customized stem clamps with slots, threaded holes, or bore sizes to match your actuator or valve system.</p>
+                                        <p>We provide both standard and fully customized adopters to fit specific machine geometries and assembly needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -259,12 +260,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
                                 <h2 class="accordion-header" id="heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        Are these clamps compatible with pneumatic actuators?
+                                        What materials are used?
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes. Our stem clamps are compatible with pneumatic, hydraulic, and electric actuators, and can be tailored for specific stroke or torque needs.</p>
+                                        <p>We use mild steel, stainless steel (304/316), alloy steel, and aluminum depending on your load and corrosion resistance needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -272,12 +273,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
                                 <h2 class="accordion-header" id="heading4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        What finishes or coatings are offered?
+                                        Do you offer machining for adopter threads or keys?
                                     </button>
                                 </h2>
                                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We provide blackodizing, zinc plating, anodizing, and anti-corrosive coatings based on the end-use application.</p>
+                                        <p>Yes, we can machine adopters with internal/external threads, keyways, or retaining features as specified in your design or standards.</p>
                                     </div>
                                 </div>
                             </div>
@@ -318,7 +319,6 @@
     </div>
 </div>
 <!-- Page Service Single End -->
-
 
     
   <!-- Footer Start -->
