--- a/index.html
+++ b/index.html
@@ -473,17 +473,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="adopters.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/9.png" alt="Product 1">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Adopters</a></h4>
+                        <h4><a href="adopters.html">Adopters</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="adopters.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -491,17 +491,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="adoptersshaft.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/10.png" alt="Product 2">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Adopters Shaft (Clamping)</a></h4>
+                        <h4><a href="adoptersshaft.html">Adopters Shaft (Clamping)</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="adoptersshaft.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
