--- a/adoptersshaft.html
+++ b/adoptersshaft.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Stem Clamp</li>
+								<li class="breadcrumb-item active" aria-current="page">Adopters</li>
 							</ol>
 						</nav>
 					</div>
@@ -176,148 +176,6 @@
 	</div>
 	<!-- Page Header End -->
 
-<!-- Page Service Single Start -->
-<div class="page-service-single">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <!-- Service Single Content Start -->
-                <div class="service-single-content">
-                    <!-- Service Featured Image Start -->
-                    <div class="service-featured-image">
-                        <figure class="image-anime reveal">
-                            <img src="images/products/6.png" alt="Stem Clamp">
-                        </figure>
-                    </div>
-                    <!-- Service Featured Image End -->
-
-                    <!-- Service Entry Start -->
-                    <div class="service-entry">
-                        <p class="wow fadeInUp">
-                            The <strong>Stem Clamp</strong> is a vital part of valve automation systems used to securely fasten actuator stems to other moving components. Vinnu Engineering Works offers high-precision stem clamps designed for strong grip, alignment accuracy, and reliable performance in dynamic industrial applications.
-                        </p>
-
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Manufactured using premium materials such as stainless steel, carbon steel, and alloy steel, our clamps are CNC-machined and tested for dimensional consistency. Each clamp is built to customer specifications or industry standards with options for split, bolted, or quick-release configurations.
-                        </p>
-
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Stem Clamp</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Our stem clamps are widely used in:</p>
-                        <ul>
-                            <li>Automated and manual valve assemblies</li>
-                            <li>Control valve systems</li>
-                            <li>Actuator and stem couplings</li>
-                            <li>Pneumatic and hydraulic motion control</li>
-                        </ul>
-
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
-                        <ul>
-                            <li>Secure grip with anti-slip design</li>
-                            <li>High torsional strength under load</li>
-                            <li>Precision bored and aligned holes</li>
-                            <li>Available in split and solid models</li>
-                            <li>Custom dimensions and surface coatings available</li>
-                        </ul>
-                    </div>
-
-                    <!-- Our FAQ Section Start -->
-                    <div class="our-faq-section">
-                        <!-- Section Title Start -->
-                        <div class="section-title">
-                            <h2 class="text-anime-style-3" data-cursor="-opaque">Frequently asked <span>questions</span></h2>
-                        </div>
-                        <!-- Section Title End -->
-
-                        <!-- FAQ Accordion Start -->
-                        <div class="faq-accordion" id="faqaccordion">
-                            <div class="accordion-item wow fadeInUp">
-                                <h2 class="accordion-header" id="heading1">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What materials are used in your stem clamps?
-                                    </button>
-                                </h2>
-                                <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>We use stainless steel (304/316), carbon steel, and alloy steel, depending on load capacity and environmental exposure.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="accordion-header" id="heading2">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Do you provide clamps with customized holes or slots?
-                                    </button>
-                                </h2>
-                                <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>Yes, we offer fully customized stem clamps with slots, threaded holes, or bore sizes to match your actuator or valve system.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
-                                <h2 class="accordion-header" id="heading3">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        Are these clamps compatible with pneumatic actuators?
-                                    </button>
-                                </h2>
-                                <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>Yes. Our stem clamps are compatible with pneumatic, hydraulic, and electric actuators, and can be tailored for specific stroke or torque needs.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
-                                <h2 class="accordion-header" id="heading4">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        What finishes or coatings are offered?
-                                    </button>
-                                </h2>
-                                <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>We provide blackodizing, zinc plating, anodizing, and anti-corrosive coatings based on the end-use application.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- FAQ Accordion End -->
-                    </div>
-                    <!-- Our FAQ Section End -->
-                </div>
-            </div>
-
-            <div class="col-lg-4 pt-4">
-                <!-- Service Sidebar Start -->
-                <div class="service-sidebar">
-                    <!-- Service Category List Start -->
-                    <div class="service-catagery-list wow fadeInUp">
-                        <h3>Products</h3>
-                        <ul>
-                            <li><a href="#">Crankshaft Rear Oil Seal Housing</a></li>
-                            <li><a href="#">Gland Flange</a></li>
-                            <li><a href="#">Yoke (Brackets)</a></li>
-                            <li><a href="#">Stem Clamp</a></li>
-                            <li><a href="#">Adopters</a></li>
-                            <li><a href="#">Adopters Shaft (Clamping)</a></li>
-                            <li><a href="#">Hand Wheel</a></li>
-                            <li><a href="#">Spacer</a></li>
-                            <li><a href="#">Gasket(Spam Guage)</a></li>
-                            <li><a href="#">Metal Disc(Piston)</a></li>
-                            <li><a href="#">Lever</a></li>
-                            <li><a href="#">Swivel (Adapter Shaft)</a></li>
-                            <li><a href="#">Indicators</a></li>
-                        </ul>
-                    </div>
-                    <!-- Service Category List End -->
-                </div>
-                <!-- Service Sidebar End -->
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Page Service Single End -->
 
 
     
