--- a/index.html
+++ b/index.html
@@ -527,51 +527,51 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="spacer.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/5.png" alt="Product 4">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Spacer</a></h4>
+                        <h4><a href="spacer.html">Spacer</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="spacer.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="gasket.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/12.png" alt="Product 4">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Gasket(Spam Guage)</a></h4>
+                        <h4><a href="gasket.html">Gasket(Spam Guage)</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="gasket.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
            <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="metaldisc.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/13.png" alt="Product 4">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Metal Disc(Piston)</a></h4>
+                        <h4><a href="metaldisc.html">Metal Disc(Piston)</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="metaldisc.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -579,17 +579,17 @@
              <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="lever.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/11.png" alt="Product 4">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">lever</a></h4>
+                        <h4><a href="lever.html">lever</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="lever.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
