--- a/gasket.html
+++ b/gasket.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Adopters Shaft (Clamping)</li>
+								<li class="breadcrumb-item active" aria-current="page">Gasket(Spam Guage)</li>
 							</ol>
 						</nav>
 					</div>
@@ -175,6 +175,7 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
+
 <!-- Page Service Single Start -->
 <div class="page-service-single">
     <div class="container">
@@ -185,7 +186,7 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/10.png" alt="Adopters Shaft (Clamping)">
+                            <img src="images/products/12.png" alt="Gasket (Spam Gauge)">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
@@ -193,29 +194,29 @@
                     <!-- Service Entry Start -->
                     <div class="service-entry">
                         <p class="wow fadeInUp">
-                            The <strong>Adopters Shaft (Clamping)</strong> is a critical linking component used for coupling actuators or gear systems to valve stems or rotating parts. Vinnu Engineering Works fabricates high-precision clamping shafts to provide secure engagement and efficient torque transmission in industrial assemblies.
+                            The <strong>Gasket (Spam Gauge)</strong> is a precision sealing component used to ensure leak-proof performance in pressure-sensitive systems. Vinnu Engineering Works manufactures custom gaskets designed to meet stringent tolerance and sealing integrity requirements for industrial applications.
                         </p>
 
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Our adopter shafts are CNC-machined to precise tolerances using high-strength materials such as stainless steel, carbon steel, and alloy steel. These shafts are designed with split clamp or key lock features to ensure rigid fixation and easy assembly.
+                            We produce gaskets using materials such as compressed fiber, PTFE, rubber composites, and metallic sheets. Our spam gauge variants are machined or die-cut to ensure accurate pressure monitoring or spacing control within flange joints and assemblies.
                         </p>
 
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Adopters Shaft (Clamping)</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Commonly used in:</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Gasket (Spam Gauge)</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Typically used in:</p>
                         <ul>
-                            <li>Valve automation and actuator drive systems</li>
-                            <li>Gear coupling and rotary shaft linkages</li>
-                            <li>Motion control and torque transfer units</li>
-                            <li>Customized mechanical interfaces</li>
+                            <li>Valve and pump sealing systems</li>
+                            <li>Flange joint alignment with gauging function</li>
+                            <li>High-pressure pipe fittings</li>
+                            <li>Oil & gas, chemical, and steam handling units</li>
                         </ul>
 
                         <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
                         <ul>
-                            <li>High clamping force with minimal backlash</li>
-                            <li>Split and slotted design for easy installation</li>
-                            <li>Compatible with keyed or plain shafts</li>
-                            <li>Custom diameters, lengths, and bore profiles</li>
-                            <li>Corrosion-resistant coatings available</li>
+                            <li>High-temperature and pressure resistance</li>
+                            <li>Custom thickness and bore profile options</li>
+                            <li>Excellent sealing and alignment control</li>
+                            <li>Available in non-metallic and metallic variants</li>
+                            <li>Accurate gauging for flange spacing</li>
                         </ul>
                     </div>
 
@@ -232,12 +233,12 @@
                             <div class="accordion-item wow fadeInUp">
                                 <h2 class="accordion-header" id="heading1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What types of clamping designs are available?
+                                        What is a spam gauge gasket used for?
                                     </button>
                                 </h2>
                                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We offer split clamp, slotted, and key-locked shaft designs to match actuator or coupling requirements.</p>
+                                        <p>It functions as both a sealing gasket and a spacer to maintain precise distance between flanged joints or pressure-critical interfaces.</p>
                                     </div>
                                 </div>
                             </div>
@@ -245,12 +246,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="accordion-header" id="heading2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Are the shafts customizable?
+                                        What materials are used for gasket manufacturing?
                                     </button>
                                 </h2>
                                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes, we offer full customization on diameter, bore profile, thread type, and length according to your drawings.</p>
+                                        <p>Common materials include compressed fiber, PTFE, rubber, stainless steel, copper, and graphite-based composites.</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,12 +259,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
                                 <h2 class="accordion-header" id="heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        What industries use adopter shafts?
+                                        Can you manufacture gaskets to specific thickness or ID/OD?
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>They are used across oil & gas, valve automation, power, and general mechanical engineering applications.</p>
+                                        <p>Yes. We customize gasket thickness, inner/outer diameter, bolt hole patterns, and tolerances based on your specifications.</p>
                                     </div>
                                 </div>
                             </div>
@@ -271,12 +272,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
                                 <h2 class="accordion-header" id="heading4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        Do you provide anti-corrosive treatments?
+                                        Are these gaskets reusable?
                                     </button>
                                 </h2>
                                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes. We offer blackodizing, zinc plating, and anodizing options to enhance life and resistance to industrial environments.</p>
+                                        <p>Most gaskets are designed for single use due to compression set; however, some metallic or spiral-wound gaskets may be reused under specific conditions.</p>
                                     </div>
                                 </div>
                             </div>
@@ -317,7 +318,6 @@
     </div>
 </div>
 <!-- Page Service Single End -->
-
 
 
     
