--- a/handwheel.html
+++ b/handwheel.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Adopters Shaft (Clamping)</li>
+								<li class="breadcrumb-item active" aria-current="page">Hand Wheel</li>
 							</ol>
 						</nav>
 					</div>
@@ -175,6 +175,8 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
+
+
 <!-- Page Service Single Start -->
 <div class="page-service-single">
     <div class="container">
@@ -185,7 +187,7 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/10.png" alt="Adopters Shaft (Clamping)">
+                            <img src="images/products/7.png" alt="Hand Wheel">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
@@ -193,29 +195,29 @@
                     <!-- Service Entry Start -->
                     <div class="service-entry">
                         <p class="wow fadeInUp">
-                            The <strong>Adopters Shaft (Clamping)</strong> is a critical linking component used for coupling actuators or gear systems to valve stems or rotating parts. Vinnu Engineering Works fabricates high-precision clamping shafts to provide secure engagement and efficient torque transmission in industrial assemblies.
+                            The <strong>Hand Wheel</strong> is a manual control component used to operate valves, actuators, and mechanical systems with precision. At Vinnu Engineering Works, we design robust and ergonomic hand wheels suited for industrial environments where manual override or adjustment is required.
                         </p>
 
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Our adopter shafts are CNC-machined to precise tolerances using high-strength materials such as stainless steel, carbon steel, and alloy steel. These shafts are designed with split clamp or key lock features to ensure rigid fixation and easy assembly.
+                            Manufactured using durable materials like cast iron, aluminum, and stainless steel, our hand wheels ensure reliable grip, high rotational accuracy, and long-lasting service under varying operational stresses. Customization options include different diameters, spoke designs, and central hubs.
                         </p>
 
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Adopters Shaft (Clamping)</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Commonly used in:</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Hand Wheels</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Widely used in:</p>
                         <ul>
-                            <li>Valve automation and actuator drive systems</li>
-                            <li>Gear coupling and rotary shaft linkages</li>
-                            <li>Motion control and torque transfer units</li>
-                            <li>Customized mechanical interfaces</li>
+                            <li>Manual valve control systems</li>
+                            <li>Gear-operated valve overrides</li>
+                            <li>Positioning and alignment jigs</li>
+                            <li>Industrial machinery adjustments</li>
                         </ul>
 
                         <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
                         <ul>
-                            <li>High clamping force with minimal backlash</li>
-                            <li>Split and slotted design for easy installation</li>
-                            <li>Compatible with keyed or plain shafts</li>
-                            <li>Custom diameters, lengths, and bore profiles</li>
-                            <li>Corrosion-resistant coatings available</li>
+                            <li>Strong construction for harsh environments</li>
+                            <li>Slip-resistant grip and balanced rotation</li>
+                            <li>Custom bore/keyway options for fitment</li>
+                            <li>Available with fixed or revolving handles</li>
+                            <li>Corrosion-resistant surface finishes</li>
                         </ul>
                     </div>
 
@@ -232,12 +234,12 @@
                             <div class="accordion-item wow fadeInUp">
                                 <h2 class="accordion-header" id="heading1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What types of clamping designs are available?
+                                        What materials are available for hand wheels?
                                     </button>
                                 </h2>
                                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We offer split clamp, slotted, and key-locked shaft designs to match actuator or coupling requirements.</p>
+                                        <p>We manufacture hand wheels in cast iron, aluminum, stainless steel, and coated mild steel based on usage and environmental needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -245,12 +247,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="accordion-header" id="heading2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Are the shafts customizable?
+                                        Can you customize the hub or bore size?
                                     </button>
                                 </h2>
                                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes, we offer full customization on diameter, bore profile, thread type, and length according to your drawings.</p>
+                                        <p>Yes, we offer custom hub diameters, bore types (plain, keyed, splined), and threads as per your drawing or sample.</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,12 +260,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
                                 <h2 class="accordion-header" id="heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        What industries use adopter shafts?
+                                        Are revolving handles available?
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>They are used across oil & gas, valve automation, power, and general mechanical engineering applications.</p>
+                                        <p>Yes, we offer both fixed and revolving handle configurations to improve ergonomics and ease of use.</p>
                                     </div>
                                 </div>
                             </div>
@@ -271,12 +273,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
                                 <h2 class="accordion-header" id="heading4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        Do you provide anti-corrosive treatments?
+                                        What surface finishes do you offer?
                                     </button>
                                 </h2>
                                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes. We offer blackodizing, zinc plating, and anodizing options to enhance life and resistance to industrial environments.</p>
+                                        <p>Hand wheels can be finished with powder coating, painting, blackodizing, or chrome plating depending on application and aesthetics.</p>
                                     </div>
                                 </div>
                             </div>
@@ -317,8 +319,6 @@
     </div>
 </div>
 <!-- Page Service Single End -->
-
-
 
     
   <!-- Footer Start -->
