--- a/lever.html
+++ b/lever.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Adopters Shaft (Clamping)</li>
+								<li class="breadcrumb-item active" aria-current="page">Adopters</li>
 							</ol>
 						</nav>
 					</div>
@@ -175,148 +175,6 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
-<!-- Page Service Single Start -->
-<div class="page-service-single">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <!-- Service Single Content Start -->
-                <div class="service-single-content">
-                    <!-- Service Featured Image Start -->
-                    <div class="service-featured-image">
-                        <figure class="image-anime reveal">
-                            <img src="images/products/10.png" alt="Adopters Shaft (Clamping)">
-                        </figure>
-                    </div>
-                    <!-- Service Featured Image End -->
-
-                    <!-- Service Entry Start -->
-                    <div class="service-entry">
-                        <p class="wow fadeInUp">
-                            The <strong>Adopters Shaft (Clamping)</strong> is a critical linking component used for coupling actuators or gear systems to valve stems or rotating parts. Vinnu Engineering Works fabricates high-precision clamping shafts to provide secure engagement and efficient torque transmission in industrial assemblies.
-                        </p>
-
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Our adopter shafts are CNC-machined to precise tolerances using high-strength materials such as stainless steel, carbon steel, and alloy steel. These shafts are designed with split clamp or key lock features to ensure rigid fixation and easy assembly.
-                        </p>
-
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Adopters Shaft (Clamping)</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Commonly used in:</p>
-                        <ul>
-                            <li>Valve automation and actuator drive systems</li>
-                            <li>Gear coupling and rotary shaft linkages</li>
-                            <li>Motion control and torque transfer units</li>
-                            <li>Customized mechanical interfaces</li>
-                        </ul>
-
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
-                        <ul>
-                            <li>High clamping force with minimal backlash</li>
-                            <li>Split and slotted design for easy installation</li>
-                            <li>Compatible with keyed or plain shafts</li>
-                            <li>Custom diameters, lengths, and bore profiles</li>
-                            <li>Corrosion-resistant coatings available</li>
-                        </ul>
-                    </div>
-
-                    <!-- Our FAQ Section Start -->
-                    <div class="our-faq-section">
-                        <!-- Section Title Start -->
-                        <div class="section-title">
-                            <h2 class="text-anime-style-3" data-cursor="-opaque">Frequently asked <span>questions</span></h2>
-                        </div>
-                        <!-- Section Title End -->
-
-                        <!-- FAQ Accordion Start -->
-                        <div class="faq-accordion" id="faqaccordion">
-                            <div class="accordion-item wow fadeInUp">
-                                <h2 class="accordion-header" id="heading1">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What types of clamping designs are available?
-                                    </button>
-                                </h2>
-                                <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>We offer split clamp, slotted, and key-locked shaft designs to match actuator or coupling requirements.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="accordion-header" id="heading2">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Are the shafts customizable?
-                                    </button>
-                                </h2>
-                                <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>Yes, we offer full customization on diameter, bore profile, thread type, and length according to your drawings.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
-                                <h2 class="accordion-header" id="heading3">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        What industries use adopter shafts?
-                                    </button>
-                                </h2>
-                                <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>They are used across oil & gas, valve automation, power, and general mechanical engineering applications.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
-                                <h2 class="accordion-header" id="heading4">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        Do you provide anti-corrosive treatments?
-                                    </button>
-                                </h2>
-                                <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>Yes. We offer blackodizing, zinc plating, and anodizing options to enhance life and resistance to industrial environments.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- FAQ Accordion End -->
-                    </div>
-                    <!-- Our FAQ Section End -->
-                </div>
-            </div>
-
-            <div class="col-lg-4 pt-4">
-                <!-- Service Sidebar Start -->
-                <div class="service-sidebar">
-                    <!-- Service Category List Start -->
-                    <div class="service-catagery-list wow fadeInUp">
-                        <h3>Products</h3>
-                        <ul>
-                            <li><a href="#">Crankshaft Rear Oil Seal Housing</a></li>
-                            <li><a href="#">Gland Flange</a></li>
-                            <li><a href="#">Yoke (Brackets)</a></li>
-                            <li><a href="#">Stem Clamp</a></li>
-                            <li><a href="#">Adopters</a></li>
-                            <li><a href="#">Adopters Shaft (Clamping)</a></li>
-                            <li><a href="#">Hand Wheel</a></li>
-                            <li><a href="#">Spacer</a></li>
-                            <li><a href="#">Gasket(Spam Guage)</a></li>
-                            <li><a href="#">Metal Disc(Piston)</a></li>
-                            <li><a href="#">Lever</a></li>
-                            <li><a href="#">Swivel (Adapter Shaft)</a></li>
-                            <li><a href="#">Indicators</a></li>
-                        </ul>
-                    </div>
-                    <!-- Service Category List End -->
-                </div>
-                <!-- Service Sidebar End -->
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Page Service Single End -->
 
 
 
