--- a/metaldisc.html
+++ b/metaldisc.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Adopters Shaft (Clamping)</li>
+								<li class="breadcrumb-item active" aria-current="page">Metal Disc(Piston)</li>
 							</ol>
 						</nav>
 					</div>
@@ -175,6 +175,7 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
+
 <!-- Page Service Single Start -->
 <div class="page-service-single">
     <div class="container">
@@ -185,7 +186,7 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/10.png" alt="Adopters Shaft (Clamping)">
+                            <img src="images/products/13.png" alt="Metal Disc (Piston)">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
@@ -193,29 +194,29 @@
                     <!-- Service Entry Start -->
                     <div class="service-entry">
                         <p class="wow fadeInUp">
-                            The <strong>Adopters Shaft (Clamping)</strong> is a critical linking component used for coupling actuators or gear systems to valve stems or rotating parts. Vinnu Engineering Works fabricates high-precision clamping shafts to provide secure engagement and efficient torque transmission in industrial assemblies.
+                            The <strong>Metal Disc (Piston)</strong> is a vital component in valve actuation and pressure control systems. At Vinnu Engineering Works, we manufacture high-precision metal pistons used in various pneumatic, hydraulic, and mechanical applications.
                         </p>
 
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Our adopter shafts are CNC-machined to precise tolerances using high-strength materials such as stainless steel, carbon steel, and alloy steel. These shafts are designed with split clamp or key lock features to ensure rigid fixation and easy assembly.
+                            These discs are crafted with tight tolerances to maintain optimal sealing, smooth axial movement, and long-term durability under cyclic loads. We offer piston variants in stainless steel, brass, aluminum, and custom alloys to meet diverse industrial performance demands.
                         </p>
 
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Adopters Shaft (Clamping)</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Commonly used in:</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Metal Disc (Piston)</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Common uses include:</p>
                         <ul>
-                            <li>Valve automation and actuator drive systems</li>
-                            <li>Gear coupling and rotary shaft linkages</li>
-                            <li>Motion control and torque transfer units</li>
-                            <li>Customized mechanical interfaces</li>
+                            <li>Pneumatic and hydraulic actuator assemblies</li>
+                            <li>Control valve and plug systems</li>
+                            <li>Industrial dampers and cylinder mechanisms</li>
+                            <li>Automotive and heavy machinery pistons</li>
                         </ul>
 
                         <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
                         <ul>
-                            <li>High clamping force with minimal backlash</li>
-                            <li>Split and slotted design for easy installation</li>
-                            <li>Compatible with keyed or plain shafts</li>
-                            <li>Custom diameters, lengths, and bore profiles</li>
-                            <li>Corrosion-resistant coatings available</li>
+                            <li>Precision turning and surface grinding</li>
+                            <li>Corrosion and wear-resistant finishes</li>
+                            <li>Custom diameter and groove configurations</li>
+                            <li>Balanced structure for high-speed operation</li>
+                            <li>Tested for leak-proof and pressure stability</li>
                         </ul>
                     </div>
 
@@ -232,12 +233,12 @@
                             <div class="accordion-item wow fadeInUp">
                                 <h2 class="accordion-header" id="heading1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What types of clamping designs are available?
+                                        What materials are available for piston discs?
                                     </button>
                                 </h2>
                                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We offer split clamp, slotted, and key-locked shaft designs to match actuator or coupling requirements.</p>
+                                        <p>We offer pistons in stainless steel, aluminum, bronze, brass, and other industrial-grade alloys tailored to your specifications.</p>
                                     </div>
                                 </div>
                             </div>
@@ -245,12 +246,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="accordion-header" id="heading2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Are the shafts customizable?
+                                        Are piston grooves and profiles customizable?
                                     </button>
                                 </h2>
                                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes, we offer full customization on diameter, bore profile, thread type, and length according to your drawings.</p>
+                                        <p>Yes. We provide custom piston profiles including seal grooves, chamfers, shoulders, and concentric ring configurations.</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,12 +259,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
                                 <h2 class="accordion-header" id="heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        What industries use adopter shafts?
+                                        Can you manufacture pistons in batches or prototypes?
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>They are used across oil & gas, valve automation, power, and general mechanical engineering applications.</p>
+                                        <p>Absolutely. We support low-volume prototype development as well as high-volume production based on drawings or samples.</p>
                                     </div>
                                 </div>
                             </div>
@@ -271,12 +272,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
                                 <h2 class="accordion-header" id="heading4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        Do you provide anti-corrosive treatments?
+                                        What is the typical tolerance on your metal discs?
                                     </button>
                                 </h2>
                                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes. We offer blackodizing, zinc plating, and anodizing options to enhance life and resistance to industrial environments.</p>
+                                        <p>Our general machining tolerance is ±0.01 mm, but we can achieve tighter specs based on part requirements and machining setup.</p>
                                     </div>
                                 </div>
                             </div>
@@ -317,7 +318,6 @@
     </div>
 </div>
 <!-- Page Service Single End -->
-
 
 
     
