--- a/index.html
+++ b/index.html
@@ -597,17 +597,17 @@
               <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="swivel.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/14.png" alt="Product 4">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#"> Swivel (Adapter Shaft)</a></h4>
+                        <h4><a href="swivel.html"> Swivel (Adapter Shaft)</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="swivel.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -615,17 +615,17 @@
              <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="indicators.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/15.png" alt="Product 4">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Indicators</a></h4>
+                        <h4><a href="indicators.html">Indicators</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="indicators.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
