--- a/indicators.html
+++ b/indicators.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">lever</li>
+								<li class="breadcrumb-item active" aria-current="page">Indicators</li>
 							</ol>
 						</nav>
 					</div>
@@ -175,6 +175,7 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
+
 <!-- Page Service Single Start -->
 <div class="page-service-single">
     <div class="container">
@@ -185,7 +186,7 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/11.png" alt="Lever">
+                            <img src="images/products/15.png" alt="Indicators">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
@@ -193,29 +194,29 @@
                     <!-- Service Entry Start -->
                     <div class="service-entry">
                         <p class="wow fadeInUp">
-                            The <strong>Lever</strong> is a mechanical actuation component used in industrial assemblies to control motion, locking, or load direction. Vinnu Engineering Works designs and manufactures high-strength levers suited for mechanical, pneumatic, and valve-based systems.
+                            <strong>Indicators</strong> are essential components used in mechanical and valve systems to provide visual feedback on position, alignment, or actuation state. Vinnu Engineering Works manufactures robust and reliable indicators that assist operators and systems in maintaining control and safety.
                         </p>
 
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Our levers are fabricated from robust materials like mild steel, stainless steel, and aluminum alloys. With precision machining and quality control, we ensure consistent dimensional accuracy, ergonomic design, and reliable force transmission in every batch.
+                            We offer precision-machined indicators made from corrosion-resistant materials that are suitable for harsh industrial environments. Whether for manual or automated systems, our indicators are designed for accuracy, clarity, and durability.
                         </p>
 
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Lever</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Widely used in:</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Indicators</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Typically used in:</p>
                         <ul>
-                            <li>Valve actuation assemblies</li>
-                            <li>Manual override systems</li>
-                            <li>Control arms and brackets</li>
-                            <li>Linkages in mechanical machines</li>
+                            <li>Valve position feedback systems</li>
+                            <li>Mechanical linkages and arms</li>
+                            <li>Control panels and operator guidance</li>
+                            <li>Flow control and directional assemblies</li>
                         </ul>
 
                         <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
                         <ul>
-                            <li>High torque and load handling capacity</li>
-                            <li>Precision bored holes and press-fits</li>
-                            <li>Anti-corrosive finishes for longevity</li>
-                            <li>Custom length, hole pattern, and angle options</li>
-                            <li>Ideal for industrial automation and control systems</li>
+                            <li>Clear, visible position indication</li>
+                            <li>Corrosion-resistant materials (SS, Aluminum)</li>
+                            <li>Custom size, color, and marking options</li>
+                            <li>Easy integration with valve and control systems</li>
+                            <li>Reliable performance in industrial environments</li>
                         </ul>
                     </div>
 
@@ -232,12 +233,12 @@
                             <div class="accordion-item wow fadeInUp">
                                 <h2 class="accordion-header" id="heading1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What types of levers do you manufacture?
+                                        What materials are used for your indicators?
                                     </button>
                                 </h2>
                                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We produce single-arm, double-arm, and custom geometry levers for industrial actuation, valve control, and machine components.</p>
+                                        <p>We typically use stainless steel, aluminum, and coated mild steel to ensure visibility and long-term resistance to corrosion.</p>
                                     </div>
                                 </div>
                             </div>
@@ -245,12 +246,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="accordion-header" id="heading2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        What materials are used in lever production?
+                                        Can you provide custom indicator designs?
                                     </button>
                                 </h2>
                                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Common materials include mild steel, stainless steel (SS304, SS316), aluminum, and alloy steels, depending on application strength and corrosion resistance needs.</p>
+                                        <p>Yes. We offer custom shapes, colors, lengths, and mounting styles tailored to your valve or assembly needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,12 +259,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
                                 <h2 class="accordion-header" id="heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        Are custom hole sizes or keyways supported?
+                                        Are your indicators compatible with automated systems?
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes, we machine holes, slots, or keyways as per customer drawings to ensure proper fitment and torque application.</p>
+                                        <p>Absolutely. Our indicators can be used in both manual and automated environments for feedback and alignment detection.</p>
                                     </div>
                                 </div>
                             </div>
@@ -271,12 +272,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
                                 <h2 class="accordion-header" id="heading4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        Do you provide levers with surface coating or painting?
+                                        Do you support bulk orders and timely delivery?
                                     </button>
                                 </h2>
                                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes. We offer powder coating, galvanization, blackodising, or anodizing based on required finish and environmental conditions.</p>
+                                        <p>Yes, we fulfill small and large batch orders with strict adherence to timelines and quality benchmarks.</p>
                                     </div>
                                 </div>
                             </div>
@@ -317,8 +318,6 @@
     </div>
 </div>
 <!-- Page Service Single End -->
-
-
 
     
   <!-- Footer Start -->
