--- a/swivel.html
+++ b/swivel.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">lever</li>
+								<li class="breadcrumb-item active" aria-current="page">Swivel (Adapter Shaft)</li>
 							</ol>
 						</nav>
 					</div>
@@ -185,7 +185,7 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/11.png" alt="Lever">
+                            <img src="images/products/14.png" alt="Lever">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
